Rust implementation of token fetch and write
Closes #22

--- a/github-token-gen/config.toml
+++ b/github-token-gen/config.toml
@@ -1,4 +1,15 @@
 # github-token-gen/config.toml
 
-app_id = "392187"
+app_id = "1331774"
 private_key_path = "private-key.pem"
+
+[group_installations]
+legacy = 68637543
+aws = 68637543
+ansible = 68637543
+aws = 68637543
+developed-applications = 68637543
+dynatrace = 68637543
+iac = 68637543
+learnings = 68637543
+legacy = 68637543
