[new tag]         terraform-provider-ghapptoken/v0.1.1 -> terraform-provider-ghapptoken/v0.1.1
Closes #35

--- a/.github/workflows/ghapptoken-release.yml
+++ b/.github/workflows/ghapptoken-release.yml
@@ -3,7 +3,7 @@ name: Release terraform-provider-ghapptoken
 on:
   push:
     tags:
-      - 'ghapptoken/v*'  # Only triggers on tags like ghapptoken/v0.1.0
+      - 'terraform-provider-ghapptoken/v*'  # Only triggers on tags like ghapptoken/v0.1.0
 
 jobs:
   release:
