Add web development repositories to terragrunt IaC
Closes #45

--- a/rust-token-fetch/config.toml
+++ b/rust-token-fetch/config.toml
@@ -10,4 +10,4 @@ ansible = 68637543
 developed-applications = 68637543
 dynatrace = 68637543
 iac = 68637543
-learnings = 68637543
+web-development = 68637543
