Add ops and misc to terragrunt
Closes #56

--- a/rust-token-fetch/config.toml
+++ b/rust-token-fetch/config.toml
@@ -11,3 +11,5 @@ developed-applications = 68637543
 dynatrace = 68637543
 iac = 68637543
 web-development = 68637543
+misc = 68637543
+ops = 68637543
