Update repo groups synchronization using automation
Closes #64

--- a/.github/workflows/create-secrets.yaml
+++ b/.github/workflows/create-secrets.yaml
@@ -9,11 +9,15 @@ on:
         required: true
         type: choice
         options:
-          - developed-applications
-          - web-dev
-          - terraform-modules
-          - ops
-
+        - repo-ansible
+        - repo-aws
+        - repo-developed-applications
+        - repo-dynatrace
+        - repo-legacy
+        - repo-misc
+        - repo-ops
+        - repo-terraform
+        - repo-web-development
       secrets_yaml:
         description: "YAML-formatted secrets with repo name as key"
         required: true
@@ -25,22 +29,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.6.6
 
-      - name: Write secrets.yaml
-        run: |
-          echo "${{ github.event.inputs.secrets_yaml }}" > developed-applications/secrets.yaml
+    - name: Write secrets.yaml
+      run: |
+        echo "${{ github.event.inputs.secrets_yaml }}" > developed-applications/secrets.yaml
 
-      - name: Run Terragrunt to apply secrets
-        run: |
-          cd developed-applications
-          terragrunt apply -auto-approve
+    - name: Run Terragrunt to apply secrets
+      run: |
+        cd developed-applications
+        terragrunt apply -auto-approve
 
-      - name: Clean up secrets file
-        run: rm -f developed-applications/secrets.yaml
+    - name: Clean up secrets file
+      run: rm -f developed-applications/secrets.yaml
