--- a/rust-token-fetch/config.toml
+++ b/rust-token-fetch/config.toml
@@ -1,15 +1,13 @@
-# rust-token-fetch/config.toml
-
 app_id = "1331774"
 private_key_path = "private-key.pem"
 
 [group_installations]
-legacy = 68637543
-aws = 68637543
-ansible = 68637543
-developed-applications = 68637543
-dynatrace = 68637543
-iac = 68637543
-web-development = 68637543
-misc = 68637543
-ops = 68637543
+repo-ansible = 68637543
+repo-aws = 68637543
+repo-developed-applications = 68637543
+repo-dynatrace = 68637543
+repo-legacy = 68637543
+repo-misc = 68637543
+repo-ops = 68637543
+repo-terraform = 68637543
+repo-web-development = 68637543
