--- a/.github/workflows/create-secrets.yaml
+++ b/.github/workflows/create-secrets.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/create-secrets.yml
 name: Create GitHub Repo Secrets
 
 on:
@@ -9,42 +8,52 @@ on:
         required: true
         type: choice
         options:
-        - repo-ansible
-        - repo-aws
-        - repo-developed-applications
-        - repo-dynatrace
-        - repo-legacy
-        - repo-misc
-        - repo-ops
-        - repo-terraform
-        - repo-web-development
-      secrets_yaml:
-        description: "YAML-formatted secrets with repo name as key"
+          - repo-ansible
+          - repo-aws
+          - repo-developed-applications
+          - repo-dynatrace
+          - repo-legacy
+          - repo-misc
+          - repo-ops
+          - repo-terraform
+          - repo-web-development
+
+      secrets_json:
+        description: "JSON-formatted secrets with repo name as key"
         required: true
         type: string
-
 
 jobs:
   apply-secrets:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: 1.6.6
+      - name: Install yq (YAML processor)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y yq jq
 
-    - name: Write secrets.yaml
-      run: |
-        echo "${{ github.event.inputs.secrets_yaml }}" > developed-applications/secrets.yaml
+      - name: Convert JSON input to secrets.yaml
+        run: |
+          mkdir -p "${{ github.event.inputs.target_directory }}"
+          echo '${{ github.event.inputs.secrets_json }}' | jq . > temp.json
+          yq -P e temp.json > "${{ github.event.inputs.target_directory }}/secrets.yaml"
+          cat "${{ github.event.inputs.target_directory }}/secrets.yaml"
 
-    - name: Run Terragrunt to apply secrets
-      run: |
-        cd developed-applications
-        terragrunt apply -auto-approve
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
 
-    - name: Clean up secrets file
-      run: rm -f developed-applications/secrets.yaml
+      - name: Run Terragrunt to apply secrets
+        run: |
+          cd "${{ github.event.inputs.target_directory }}"
+          terragrunt apply -auto-approve
+
+      - name: Clean up secrets file
+        run: |
+          rm -f temp.json
+          rm -f "${{ github.event.inputs.target_directory }}/secrets.yaml"
