Create secrets pipeline manual workflow needs to be automated
Closes #68

--- a/.github/workflows/create-secrets.yaml
+++ b/.github/workflows/create-secrets.yaml
@@ -3,23 +3,48 @@ name: Create GitHub Repo Secrets
 on:
   workflow_dispatch:
     inputs:
-      target_directory:
-        description: "Select the folder to apply secrets to"
+      repository_name:
+        description: "Select target repository"
         required: true
         type: choice
         options:
-          - repo-ansible
-          - repo-aws
-          - repo-developed-applications
-          - repo-dynatrace
-          - repo-legacy
-          - repo-misc
-          - repo-ops
-          - repo-terraform
-          - repo-web-development
-
+          - ansible-windows-bootstrap
+          - ansible-playbooks-common-devops
+          - legacy-cpp-library-adt-dsa
+          - legacy-cpp-polish-reverse-polish-converter
+          - legacy-cpp-sorting-techniques
+          - legacy-java-learning-problems
+          - legacy-c-language-projects
+          - webdev-clone-amazon
+          - webdev-tool-microservices-blog
+          - webdev-ui-dropdown-menu
+          - webdev-app-flat-guru-usf
+          - webdev-app-green-rise-nepal
+          - webdev-learn-js-journey
+          - webdev-portfolio-main
+          - webdev-learn-js-projects
+          - webdev-app-weather
+          - dmz
+          - homebrew-dmz
+          - aws-service-notes
+          - aws-cli-automation-scripts
+          - aws-3tier-web-architecture
+          - aws-cloud-native-microservices-deployment
+          - aws-lambda-serverless-jira-github-sync
+          - aws-iac-terraform-monorepo
+          - aws-mongodb-ha-replicaset-cluster
+          - dynatrace-terraform-observability-dashboards
+          - Terraform-best-methods
+          - terraform-github-ayuspo
+          - Terraform-Automation-Projects
+          - ayuspoudel-resume
+          - ayuspoudel
+          - ops-shell-scripting-automation
+          - ops-cicd-pipeline-jenkins-argocd-k8s
+          - ops-kubernetes-demo-application
+          - ops-python-infra-utilities
       secrets_json:
-        description: "JSON-formatted secrets with repo name as key"
+        description: "JSON secrets {KEY: VALUE, ...}"
         required: true
         type: string
 
@@ -31,29 +56,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install yq (YAML processor)
+      - name: Resolve folder and state from CSV
+        id: lookup
         run: |
-          sudo apt-get update
-          sudo apt-get install -y yq jq
+          REPO="${{ github.event.inputs.repository_name }}"
+          IFS=',' read -r FOLDER_NAME REPO_NAME STATE_NAME <<< $(awk -F, -v repo="$REPO" 'NR > 1 && $2 == repo { print $1 "," $2 "," $3 }' .artifacts/repos.csv)
+          echo "folder_name=$FOLDER_NAME" >> $GITHUB_OUTPUT
+          echo "state_name=$STATE_NAME" >> $GITHUB_OUTPUT
 
-      - name: Convert JSON input to secrets.yaml
+      - name: Decode secrets_json and write secrets.yaml
         run: |
-          mkdir -p "${{ github.event.inputs.target_directory }}"
-          echo '${{ github.event.inputs.secrets_json }}' | jq . > temp.json
-          yq -P e temp.json > "${{ github.event.inputs.target_directory }}/secrets.yaml"
-          cat "${{ github.event.inputs.target_directory }}/secrets.yaml"
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
+          mkdir -p "${{ steps.lookup.outputs.folder_name }}"
+          echo '${{ github.event.inputs.secrets_json }}' | jq . | yq -P e - > "${{ steps.lookup.outputs.folder_name }}/secrets.yaml"
 
       - name: Run Terragrunt to apply secrets
         run: |
-          cd "${{ github.event.inputs.target_directory }}"
+          cd "${{ steps.lookup.outputs.folder_name }}"
           terragrunt apply -auto-approve
 
-      - name: Clean up secrets file
-        run: |
-          rm -f temp.json
-          rm -f "${{ github.event.inputs.target_directory }}/secrets.yaml"
+      - name: Cleanup
+        run: rm -f "${{ steps.lookup.outputs.folder_name }}/secrets.yaml"
