--- a/.github/workflows/create-secrets.yaml
+++ b/.github/workflows/create-secrets.yaml
@@ -69,10 +69,17 @@ jobs:
           mkdir -p "${{ steps.lookup.outputs.folder_name }}"
           echo '${{ github.event.inputs.secrets_json }}' | jq . | yq -P e - > "${{ steps.lookup.outputs.folder_name }}/secrets.yaml"
 
+      - name: Install Terragrunt
+        run: |
+          curl -L https://github.com/gruntwork-io/terragrunt/releases/latest/download/terragrunt_linux_amd64 -o terragrunt
+          chmod +x terragrunt
+          sudo mv terragrunt /usr/local/bin/terragrunt
+  
       - name: Run Terragrunt to apply secrets
         run: |
           cd "${{ steps.lookup.outputs.folder_name }}"
           terragrunt apply -auto-approve
+
 
       - name: Cleanup
         run: rm -f "${{ steps.lookup.outputs.folder_name }}/secrets.yaml"
