--- a/.github/workflows/create-secrets.yaml
+++ b/.github/workflows/create-secrets.yaml
@@ -68,7 +68,10 @@ jobs:
         run: |
           mkdir -p "${{ steps.lookup.outputs.folder_name }}"
           echo '${{ github.event.inputs.secrets_json }}' | jq . | yq -P e - > "${{ steps.lookup.outputs.folder_name }}/secrets.yaml"
-
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
       - name: Install Terragrunt
         run: |
           curl -L https://github.com/gruntwork-io/terragrunt/releases/latest/download/terragrunt_linux_amd64 -o terragrunt
