--- a/.github/workflows/apply-terragrunt.yaml
+++ b/.github/workflows/apply-terragrunt.yaml
@@ -1,11 +1,15 @@
 name: Apply Terragrunt
-permissions:
-  contents: write
+
 
 on:
   push:
     branches:
       - main
+permissions:
+  contents: write
+  id-token: write
+  actions: write
+
 env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
