--- a/.github/workflows/apply-terragrunt.yaml
+++ b/.github/workflows/apply-terragrunt.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Checkout with App Token
         uses: actions/checkout@v4
         with:
-            token: ${{ steps.generate-token.outputs.token }}
+            token: ${{ steps.app-token.outputs.token }}
       - name: Commit & Push changes
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
