--- a/.github/workflows/create-secrets.yaml
+++ b/.github/workflows/create-secrets.yaml
@@ -56,6 +56,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Debug Creator
+        run: 'echo "GitHub Actor: ${{ github.actor }}"'
+
       - name: Resolve folder and state from CSV
         id: lookup
         run: |
