--- a/.github/workflows/create-secrets.yaml
+++ b/.github/workflows/create-secrets.yaml
@@ -59,6 +59,11 @@ jobs:
       - name: Debug Creator
         run: 'echo "GitHub Actor: ${{ github.actor }}"'
 
+      - name: Debug Commit Info
+        run: |
+          echo "Author Name: ${{ github.event.head_commit.author.name }}"
+          echo "Author Email: ${{ github.event.head_commit.author.email }}"
+
       - name: Resolve folder and state from CSV
         id: lookup
         run: |
